--- a/grid/划分区域.md
+++ b/grid/划分区域.md
@@ -6,6 +6,8 @@
 
 <div>
 
+<v-click>
+
 通过为子项指定网格线来指定位置，设置起来比较麻烦，下面介绍一种更快指定子项区域的的方法。通过 <kbd>grid-template-areas</kbd> 属性可以为网格系统划分区域，例如我们将一个 $4 \times 3$ 的网格系统划分为如下区域
 
 ```css
@@ -19,6 +21,10 @@
 ```
 
 使用 <kbd>.</kbd> 表示这个网格单元没有被使用。
+
+</v-click>
+
+<v-click>
 
 在子项中通过 <kbd>grid-area</kbd> 应用容器中划分的区域，子项即可占用这个区域
 
@@ -37,9 +43,15 @@
 }
 ```
 
+</v-click>
+
+
+
 </div>
 
 <div class="-mt-9">
+
+<v-click>
 
 <GridBox
   :counts="4"
@@ -48,7 +60,13 @@
   :itemStyles="itemStyles"
 />
 
+</v-click>
+
+<v-clicks>
+
 通过 <kbd>grid-template-areas</kbd> 为网格系统划分区域，包围区域的网格线会被自动命名为 <kbd>区域名称-start</kbd> 或 <kbd>区域名称-end</kbd>，例如区域名 <kbd>header</kbd> 的起始和终止网格线会被命名为 <kbd>header-start</kbd> 和 <kbd>header-end</kbd>.
+
+<div>
 
 <kbd>grid-area</kbd> 还可以被用作 <kbd>grid-row-start</kbd> <kbd>grid-coulmn-start</kbd> <kbd>grid-row-end</kbd> <kbd>grid-column-end</kbd> 的简写形式
 
@@ -57,6 +75,10 @@ grid-area:
   grid-row-start / grid-column-start / grid-row-end / grid-column-end;
 ```
 
+</div>
+
+<div>
+
 我们为 header 子项指定也可区域可以写为如下
 
 ```css
@@ -64,6 +86,9 @@ grid-area:
   grid-area: header-start / header-start / header-end / header-end;
 }
 ```
+</div>
+
+</v-clicks>
 
 </div>
 
@@ -89,6 +114,6 @@ const itemStyles = [{
   backgroundColor: '#12aa9c'
 }, {
   gridArea: 'footer',
-  backgroundColor: '#c08eaf'
+  backgroundColor: '#0f95b0'
 }]
 </script>
