--- a/grid/划分网格.md
+++ b/grid/划分网格.md
@@ -6,6 +6,8 @@
 
 <div>
 
+<v-click>
+
 <kbd>grid-columns</kbd> 规定将网格划分为多少列，并且每列的轨道大小。<kbd>grid-rows</kbd> 规定将网格划分为多少行，以及每行的轨道大小。
 
 ```css {2-3}
@@ -21,6 +23,11 @@
     gridTemplateRows: '50px 50px'
   }"
 />
+
+</v-click>
+
+
+<v-click>
 
 轨道大小的单位也可以是百分比
 
@@ -39,14 +46,20 @@
   }"
 />
 
+</v-click>
+
+
+
 </div>
 
 
 <div>
 
+<v-click>
+
 通过 <kbd>repeat()</kbd> 函数指定重复次数，避免写重复的值
 
-```css
+```css {2-3}
 .container {
   grid-template-columns: repeat(4, 50px);
   grid-template-rows: repeat(2, 50px);
@@ -61,9 +74,14 @@
   }"
 />
 
+</v-click>
+
+
+<v-click>
+
 还可以重复某种模式
 
-```css
+```css {2-3}
 .container {
   grid-template-columns: repeat(3, 50px 100px);
   grid-template-rows: repeat(2, 50px);
@@ -77,6 +95,8 @@
     gridTemplateRows: 'repeat(2, 50px)'
   }"
 />
+
+</v-click>
 
 </div>
 
