--- a/grid/填充方向.md
+++ b/grid/填充方向.md
@@ -6,6 +6,10 @@
 
 <div>
 
+<v-clicks>
+
+<div>
+
 默认的填充方式为按行自动填充，它是通过 <kbd>grid-auto-flow</kbd> 属性来规定的，其默认值为 <kbd>row</kbd>，即按行填充
 
 ```css
@@ -24,6 +28,9 @@
   }"
 />
 
+</div>
+
+<div>
 设置 <kbd>grid-auto-flow</kbd> 为 <kbd>column</kbd>，元素将会默认按列进行填充
 
 ```css {2}
@@ -42,7 +49,15 @@
 
 </div>
 
+</v-clicks>
+
+</div>
+
 <div class="-mt-24">
+
+<v-clicks>
+
+<div>
 
 默认的填充算法是稀疏 <kbd>(sparse)</kbd> 填充
 
@@ -74,6 +89,10 @@
   }]"
 />
 
+</div>
+
+<div>
+
 ```css
 .container {
   grid-auto-flow: row dense;
@@ -93,6 +112,10 @@
     gridColumn: '1 / 3'
   }]"
 />
+
+</div>
+
+</v-clicks>
 
 </div>
 
