--- a/grid/子项对齐.md
+++ b/grid/子项对齐.md
@@ -6,6 +6,8 @@
 
 <TwoColumn>
 
+<v-clicks>
+
 <div>
 
 ```css
@@ -76,5 +78,12 @@
 
 </div>
 
+</v-clicks>
+
 </TwoColumn>
 
+<v-click>
+
+<kbd>place-self</kbd> 是 <kbd>justify-self</kbd> 与 <kbd>align-self</kbd> 的简写形式。
+
+</v-click>
