--- a/grid/子项排列.md
+++ b/grid/子项排列.md
@@ -6,6 +6,8 @@
 
 <div>
 
+<v-click>
+
 当我们划分好网格以后，子项会依次按行填充，那可不以可以指定子项排列到特定的位置呢？通过子项的 <kbd>grid-column-start</kbd> <kbd>grid-column-end</kbd> <kbd>grid-row-start</kbd> <kbd>grid-row-end</kbd> 属性。
 
 | 属性 | 含义 |
@@ -15,15 +17,25 @@
 | <kbd>grid-row-start</kbd> | 起始行网格线
 | <kbd>grid-row-end</kbd> | 结束行网格线
 
+</v-click>
+
+<v-click>
+
 <GridBox 
   :style="style"
   :itemStyle="itemStyle"
   :itemStyles="itemStyles"
 />
 
+</v-click>
+
+
+
 </div>
 
 <div class="-mt-24">
+
+<v-click>
 
 ```css
 .container {
@@ -47,6 +59,10 @@
 }
 ```
 
+</v-click>
+
+<v-click>
+
 <kbd>grid-column</kbd> 与 <kbd>grid-row</kbd> 是简写形式，写法如下
 
 ```css
@@ -66,6 +82,8 @@ grid-row: grid-row-start / grid-row-end;
   grid-row: 2 / 3;
 }
 ```
+
+</v-click>
 
 </div>
 
