--- a/grid/子项排列续.md
+++ b/grid/子项排列续.md
@@ -7,6 +7,8 @@ image: https://cdn.jsdelivr.net/gh/LastKnightCoder/ImgHosting3@master/shanya.6ko
 
 网格线命名
 
+<v-click>
+
 在 <kbd>grid-column</kbd> 与 <kbd>grid-row</kbd> 使用  <kbd>span</kbd> 来表示跨越的网格数，所以上述样式可以修改如下
 
 ```css {2,6}
@@ -19,6 +21,11 @@ image: https://cdn.jsdelivr.net/gh/LastKnightCoder/ImgHosting3@master/shanya.6ko
   grid-row: 2 / 3;
 }
 ```
+
+</v-click>
+
+
+<v-click>
 
 我们可以在通过 <kbd>grid-template-rows</kbd> 与 <kbd>grid-template-columns</kbd> 划分网格的同时为网格线进行命名。网格的名称使用 <kbd>[]</kbd> 包裹起来
 
@@ -37,3 +44,5 @@ grid-row: r1 / r2;
 ```
 
 同一个网格线可以有多个名称，名称之间使用空格间隔 <kbd>[r1 start]</kbd>.
+
+</v-click>
