--- a/grid/容器垂直对齐.md
+++ b/grid/容器垂直对齐.md
@@ -6,6 +6,10 @@
 
 <div class="grid grid-cols-6 gap-20">
 
+<v-clicks>
+
+
+
 <div>
 
 <kbd>start</kbd>
@@ -64,6 +68,8 @@
 />
 
 </div>
+
+</v-clicks>
 
 </div>
 
