--- a/grid/容器水平对齐.md
+++ b/grid/容器水平对齐.md
@@ -11,17 +11,29 @@
 
 <div>
 
+<v-clicks>
+
+<div>
+
 <kbd>start</kbd>
 
 <GridBox
   :style="style[0]"
 />
 
-<kbd>start</kbd>
+</div>
+
+<div>
+
+<kbd>end</kbd>
 
 <GridBox
   :style="style[1]"
 />
+
+</div>
+
+<div>
 
 <kbd>center</kbd>
 
@@ -31,6 +43,13 @@
 
 </div>
 
+</v-clicks>
+
+</div>
+
+<div>
+
+<v-clicks>
 <div>
 
 <kbd>space-between</kbd>
@@ -38,6 +57,9 @@
 <GridBox
   :style="style[3]"
 />
+</div>
+
+<div>
 
 <kbd>space-around</kbd>
 
@@ -45,11 +67,19 @@
   :style="style[4]"
 />
 
+</div>
+
+<div>
+
 <kbd>space-evenly</kbd>
 
 <GridBox
   :style="style[5]"
 />
+
+</div>
+
+</v-clicks>
 
 </div>
 
