--- a/grid/水平对齐.md
+++ b/grid/水平对齐.md
@@ -6,7 +6,11 @@
 
 <div>
 
+<v-clicks>
+
 没有为子项设定宽度和高度时，默认子项是自动撑满网格单元的，如果为子项设定大小，那么子项就不会撑满网格单元，这时可以通过 <kbd>justify-items</kbd> 和 <kbd>align-items</kbd> 设置子项的对齐方式。
+
+<div>
 
 ```css
 .container {
@@ -23,6 +27,10 @@
   :itemStyle="itemStyle[0]"
 />
 
+</div>
+
+<div>
+
 通过  <kbd>justify-items</kbd> 来设置在网格单元上水平对齐，取值有
 
 | <kbd>start</kbd> | <kbd>end</kbd> | <kbd>center</kbd> | <kbd>stretch</kbd> |
@@ -32,8 +40,15 @@
 
 </div>
 
+</v-clicks>
+
+</div>
+
 <div>
 
+<v-clicks>
+
+<div>
 
 <kbd>start</kbd>
 
@@ -42,6 +57,10 @@
   :itemStyle="itemStyle[0]"
 />
 
+</div>
+
+<div>
+
 <kbd>end</kbd>
 
 <GridBox
@@ -49,12 +68,20 @@
   :itemStyle="itemStyle[0]"
 />
 
+</div>
+
+<div>
+
 <kbd>center</kbd>
 
 <GridBox
   :style="style[3]"
   :itemStyle="itemStyle[0]"
 />
+
+</div>
+
+</v-clicks>
 
 </div>
 
