--- a/grid/网格单位.md
+++ b/grid/网格单位.md
@@ -1,10 +1,12 @@
-# fr 、auto-fill 与 minmax()
+# fr 、auto-fill与minmax()
 
 特殊的网格单位
 
 <TwoColumn>
 
 <div>
+
+<v-click>
 
 当我们规定轨道大小时，我们还可以使用 <kbd>fr</kbd> 这个单位，它表示剩余空间，与 Flex 布局中的 <kbd>flex-grow</kbd> 类似。
 
@@ -25,6 +27,11 @@
   }"
 />
 
+</v-click>
+
+
+<v-click>
+
 通过 <kbd>repeat()</kbd> 和 <kbd>fr</kbd> 我们可以轻松的实现经典的 12 网格布局
 
 ```css {2}
@@ -40,9 +47,13 @@
   }"
 />
 
+</v-click>
+
 </div>
 
 <div>
+
+<v-click>
 
 有的网格单元的大小是固定，而容器的大小不确定，如果我们希望每一行(列)尽可能多的包含更多的网格，我们可以使用 <kbd>auto-fill</kbd> 关键字表示自动填充
 
@@ -59,6 +70,10 @@
   }"
 />
 
+</v-click>
+
+<v-click>
+
 我们可以通过 <kbd>minmax()</kbd> 来规定轨道的最小最大尺寸
 
 ```css
@@ -73,8 +88,6 @@
     gridTemplateColumns: '1fr 1fr minmax(100px, 1fr)'
   }"
 />
-
-
 
 ```css
 .container {
@@ -91,6 +104,7 @@
   }"
 />
 
+</v-click>
 
 </div>
 
